# laboProgram

./: .gitignore  plot_score.py
app/: CMakeLists.txt  main.c  main_no_gif.c
build_wsl/app/: test_30.csv
include/: Common_func.h  base_func.h  base_struct.h  config.h  globals.h  move.h  my_func.h  placement.h  placement_100_0.h  placement_40_60.h  placement_60_40.h  placement_80_20.h
src/: CMakeLists.txt  Common_func.c  base_func.c  globals.c  move.c  my_func.c  placement.c  placement_100_0.c  placement_40_60.c  placement_60_40.c  placement_80_20.c
